--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <title>Torrel</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./app/assets/css/main.css" />
 </head>
 
 <body>
-  <div id="wrapper"></div>
+  <div id="app_content"></div>
   <script src="./dist/app.js"></script>
 </body>
 
